[gd_scene load_steps=5 format=2]

[ext_resource path="res://weapon_item.png" type="Texture" id=1]
[ext_resource path="res://player/BulletSpawn.gd" type="Script" id=2]
[ext_resource path="res://player/Weapon.gd" type="Script" id=3]

[sub_resource type="Animation" id=1]
resource_name = "fire"

[node name="Weapon" type="Node2D"]
script = ExtResource( 3 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="BulletSpawn" type="Node2D" parent="."]
script = ExtResource( 2 )

[node name="CooldownTimer" type="Timer" parent="BulletSpawn"]
wait_time = 0.4
one_shot = true

[node name="ArmPoint" type="Position2D" parent="BulletSpawn"]
position = Vector2( 9.92872, -0.948954 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/fire = SubResource( 1 )
